<resources>
    <string name="app_name">Calculator</string>
    <string name="AllClear">AC</string>
    <string name="Clear">C</string>
    <string name="Root">Sqrt</string>
    <string name="PlusOrMinus">+/-</string>
    <string name="Minus">-</string>
    <string name="Plus">+</string>
    <string name="Multiply">x</string>
    <string name="Divide">/</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="Equals">=</string>
    <string name="Dot">.</string>
    <string name="MulUnicode">\u00D7</string>
    <string name="RootUnicode">\u221A</string>
</resources>
